--- a/src/bib.bib
+++ b/src/bib.bib
@@ -7972,10 +7972,9 @@ journal = james,
 volume = {},
 number = {},
 url = {},
-doi = {},
+doi = {10.1029/2017MS001257},
 pages = {},
-year = {2018},
-note = {revised}
+year = {2018}
 }
 
 @article{UDJ2016MWR,
@@ -8063,3 +8062,4 @@ author={Adam R. Herrington and Peter Hjort Lauritzen and Mark A. Taylor and Stev
 year={2018},
 OPTpages={3610-3624},
 }
+
