--- a/src/energy.tex
+++ b/src/energy.tex
@@ -37,6 +37,8 @@
 %% For final version.
 \documentclass{agujournal}
 \usepackage{url}
+%\newcommand*{\gi}[1]{\overline{\overline{#1}}}
+\newcommand*{\gi}[1]{\widehat{#1}}
 % Now, type in the journal name: \journalname{<Journal Name>}
 
 % ie, \journalname{Journal of Geophysical Research}
@@ -241,22 +243,22 @@ where $\rho^{(d)}$ is the mass of dry air per unit volume of moist air and $\rho
 \end{equation}
 Define associated heat capacities at constant pressure $c_p^{(\ell)}$. Using the $\eta^{(d)}$ vertical coordinate and dry mixing ratios the total energy that the frictionless adiabatic equations of motion in the CAM-SE dynamical core conserves is 
 \begin{equation}
-\left< E^{(dycore)}\right>=\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\sum_{\ell \in \mathcal{L}_{all}} \left[m^{(\ell)} \left(K+c_p^{(\ell)}T+\Phi_s  \right)\right]  dA d \eta^{(d)},\label{eq:comprehensice_energy}
+\gi{E}_{dyn}=\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\sum_{\ell \in \mathcal{L}_{all}} \left[m^{(\ell)} \left(K+c_p^{(\ell)}T+\Phi_s  \right)\right]  dA d \eta^{(d)},\label{eq:comprehensice_energy}
 \end{equation}
-where $\Phi_s$ is the surface geopotential.
+where $\Phi_s$ is the surface geopotential and $\gi{(\cdot)}$ refers to the global integral.
 
 In the CAM physical parameterizations a different definition of total energy is used. Due to the evolutionary nature of the model development, the parameterizations have not yet been converted to match the SE dynamical core. For the computation of total energy condensates are assumed to be zero and the heat capacity of moisture is the same as for dry air. This is equivalent to using a moist mass (dry air plus water vapor) but $c_p$ of dry air.
 \begin{equation}
 \label{eq:Ephys}
-\left< E^{(physics)}\right> =\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\left(1+m^{(wv)}\right)\left[ \left(K+c_p^{(d)}T+\Phi_s\right)\right]dA d \eta^{(d)}.
+\gi{E}_{phys} =\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\left(1+m^{(wv)}\right)\left[ \left(K+c_p^{(d)}T+\Phi_s\right)\right]dA d \eta^{(d)}.
 \end{equation}
 We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. 
 One can make the adiabatic, frictionless equations of motion in the dynamical core conserve $E^{(physics)}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We will also make use of this configuration in the analysis presented in this paper.
 
 
-\subsection{Spurious energy sources and sinks}
+\subsection{Spurious energy sources and sinks}\label{subsec:spuriousE}
 In a weather/climate model total energy conservation errors can appear in many places throughout the algorithm. Below is a general list of where conservation errors can appear with specific examples from CAM:
-\begin{itemize}
+\begin{enumerate}
 \item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget. However, CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the total energy change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
 \item {\em{Pressure work}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture leaving the column). In that case the pressure changes which, in turn, changes total energy, here referred to as {\em{pressure work}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency is passed to the dynamical core which is responsible for adding the tendencies to the state before advancing the dynamics. PDC energy errors can be split into two types:
@@ -273,11 +275,109 @@ In a weather/climate model total energy conservation errors can appear in many p
 \item Near round-off negative values
 \end{itemize}
 \item {\em{Continuous total energy formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a total energy different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a total energy that is more accurate and comprehensive than the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design.
-\end{itemize}
-To avoid total energy conservation errors which could accumulate and ultimately lead to a climate drift, it is customary to use an energy fixer to restore total energy conservation. Since the spatial distribution of energy errors, in general, is not known, global fixers are used. In CAM a uniform increment is added to the temperature field to compensate for total energy loss in the dynamical core, physics-dynamics coupling and energy change dues to pressure work. 
+\end{enumerate}
+To avoid total energy conservation errors which could accumulate and ultimately lead to a climate drift, it is customary to use an energy fixer to restore total energy conservation. Since the spatial distribution of energy errors, in general, is not known, global fixers are used. In CAM a uniform increment is added to the temperature field to compensate for total energy loss in the dynamical core, physics-dynamics coupling and energy change due to pressure work. 
 %
 \section{Results}
-\subsection{Temporal averaging}
+A series of simulations have been performed with CESM2.0 using CAM version 6 physics (\url{https://doi.org/10.5065/D67H1H0V}). Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.0: 
+\begin{itemize}
+\item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS}. 
+\item {\em{QPC6}}: The QPC6 configuration refers to an aqua-planet setup; i.e. an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES}. 
+\item {\em{F2000climo}}: The F2000climo configuration refers to a `real-world' AMIP (Atmospheric Model Intercomparison Project) type simulations using perpetual year 2000 SST (Sea Surface Temperature) boundary conditions.
+\end{itemize}
+\subsection{Diagnostics}
+The discrete global integrals $\gi{(\cdot)}$ are computed consistent with the dynamical core as outlined in section 2.2. of \citet{LBDL2014JAMES}. The total energy tendency is denoted
+\begin{equation}
+\partial \gi{E}\equiv \frac{d\gi{E}}{dt}.
+\end{equation}
+{\color{red}{Describe temporal averaging and \ref{fig:dAD}}}
+By placing output calls in appropriate locations in the code, we can directly compute $\partial \gi{E}$ due to various steps in the algorithm {\color{red}{refer section 2.2}}. Define the following energy tendencies (corresponding to itemized list in section \ref{subsec:spuriousE}):
+\begin{enumerate}
+%
+\item $\partial \gi{E}^{(param)}$: Total energy tendency due to parameterizations. In CAM the total energy budget for each parameterization is closed (assuming constant pressure) so $\partial \gi{E}^{(param)}$ are balanced by net fluxes in/out of the physics columns. Note that this is the only energy tendency that is not spurious since CAM parameterizations have a closed energy budget. This total energy tendency is discretely computed as
+\begin{equation}
+\partial \gi{E}_{phys}^{({param})}=\frac{\gi{E}_{pAP}-\gi{E}_{pBP}}{\Delta t_{phys}},
+\end{equation}
+where $\Delta t_{phys}$ is the physics time-step (1800s) and the subscript $phys$ refers to the energy tendency being computed in CAM physics. 
+%
+\item $\partial \gi{E}^{({pwork})}$: Total spurious energy tendency due to pressure work
+\begin{equation}
+\partial \gi{E}_{phys}^{({pwork})}=\frac{\gi{E}_{pAM}-\gi{E}_{pAP}}{\Delta t_{phys}}.
+\end{equation}
+The total forcing from physics (at least in CAM) consists of parameterizations, pressure work and total energy fixer, with associated energy tendency
+\begin{equation}
+\partial \gi{E}_{phys}^{({efix})}=\frac{\gi{E}_{pBP}-\gi{E}_{pBF}}{\Delta t_{phys}}.
+\end{equation}
+For notational convenience we refer to the associated energy tendency from all of physics as
+\begin{equation}
+\partial \gi{E}_{phys}^{({phys})}\equiv \partial \gi{E}_{phys}^{({param})}+\partial \gi{E}_{phys}^{({pwork})}+\partial \gi{E}_{phys}^{({efix})}=\frac{\gi{E}_{pAM}-\gi{E}_{pBF}}{\Delta t_{phys}}.
+\end{equation}
+%
+\item $\partial \gi{E}^{({pdc})}$: Total spurious energy tendency due to physics-dynamics coupling errors is the difference between the energy tendency from physics and the energy tendency in the dynamics resulting from adding the physics increment to the dynamical core state
+\begin{equation}
+\partial \gi{E}^{({pdc})}=\partial \gi{E}_{phys}^{({phys})}-\partial \gi{E}_{dyn}^{({phys})},
+\end{equation}
+where
+\begin{equation}
+\partial \gi{E}_{dyn}^{({param})}=\frac{\gi{E}_{dAD}-\gi{E}_{dAF}}{\Delta t_{pdc}},
+\end{equation}
+and $\Delta t_{pdc}$ is the time-step between physics increments being added to the dynamical core. In CAM-SE there are 3 physics-dynamics coupling algorithms described in detail in section 3.6 in \citet{LetAl2018JAMES}. One is state-update in which the entire physics increments is added to the dynamics state at the beginning of dynamics (referred to as $ftype=1$), in which case $\Delta t_{pdc}=\Delta t_{phys}$, one is `dribbling' in which the physics tendency is split into $nsplit$ equal chunks and added throughout dynamics (more precisely after every vertical remapping; referred to as $ftype=0$ resulting in $\Delta t_{pdc}=\frac{1}{nsplit}\Delta t_{phys}$), and then a combination of the two where tracers use  $ftype=1$ and all other physics tendencies used  $ftype=0$ (referred to as $ftype=2$). 
+%where the subscript $phys$ in $\partial \gi{E}_{phys}^{({phys})}$ refers to the total energy tenendency being computed in CAM physics using the formula for energy consistent with physics \eqref{eq:Ephys}. In CAM the vertical and horizontal grids in physics and dynamics coincide  so physics-dynamics coupling errors are due to the temporal aspect of coupling (errors due to `dribbling' tendencies in the dynamical core). The total energy tenendency due to physics tendencies being added to the dynamical core is
+%\begin{equation}
+%\partial \gi{E}^{({phys})}_{dyn}=
+%\end{equation}
+%If the same energy definition is used in the physics and dynamical core, and an energy conservative physics dynamics coupling method is used, then $\partial \gi{E}_{phys}^{({param})}$.
+\item The total energy tendency from the dynamical core is split into several terms:
+\begin{itemize} 
+\item Horizontal adiabatic dynamics (dynamics excluding physics forcing tendency)
+\begin{equation}
+\partial \gi{E}_{dyn}^{({2D})}=\frac{\gi{E}_{dAD}-\gi{E}_{dBD}}{\Delta t_{dyn}},
+\end{equation}
+where $\Delta t_{dyn}=\frac{\Delta t_{phys}}{nsplit\times rsplit}$
+In CAM-SE the viscosity is explicit to we can compute the total energy tendency due to hyperviscosity
+\begin{equation}
+\partial \gi{E}_{dyn}^{({hvis})}=\frac{\gi{E}_{dAH}-\gi{E}_{dBH}}{\Delta t_{hvis}},
+\end{equation}
+which, in CAM-SE, includes a frictional heating term (viscosity on momentum has been added to $\partial \gi{E}_dyn^{({hvis})}_{dyn}$) with associate energy tendency
+\begin{equation}
+\partial \gi{E}_{dyn}^{({fheat})}=\frac{\gi{E}_{dAH}-\gi{E}_{dCH}}{\Delta t_{hvis}},
+\end{equation}
+where $\Delta t_{hvis}=\frac{\Delta t_{phys}}{nsplit\times rsplit \times hypervis\_subcycle}$. The residual
+\begin{equation}
+\partial \gi{E}_{dyn}^{({res})}=\partial \gi{E}_{dyn}^{({2D})}-\partial \gi{E}_{dyn}^{({hvis})},
+\end{equation}
+is energy errors due to inviscid dynamics and time-truncation errors.
+
+The energy tendency due to vertical remapping is
+\begin{equation}
+\partial \gi{E}_{dyn}^{({remap})}=\frac{\gi{E}_{dAR}-\gi{E}_{dAD}}{\Delta t_{remap}},
+\end{equation}
+where $\Delta t_{remap}=\frac{\Delta t_{phys}}{nsplit}$.
+
+The 3D adiabatic dynamical core (no physics forcing) energy tendency is denoted
+\begin{equation}
+\partial \gi{E}_{dyn}^{({adiab})}=\partial \gi{E}_{dyn}^{({2D})}+\partial \gi{E}_{dyn}^{({remap})}.
+\end{equation}
+
+
+{\color{red}{split parameters not defined}}
+\item Errors associated with a discrepancy in energy formulas are more tricky to assess. {\color{red}{more text needed}}
+\end{itemize}
+\end{enumerate}
+\paragraph{A couple of observations regarding the energy budget when both physics and dynamics uses the same total energy formula}: It is important to note that the energy fixer fixes energy dissipation in the dynamical core, pressure work and physics-dynamics coupling errors
+\begin{equation}
+\label{eq:budget_efix}
+-\partial \gi{E}_{phys}^{({efix})}=\partial \gi{E}_{phys}^{({pwork})}+\partial \gi{E}_{dyn}^{({adiab})}+\partial \gi{E}_{dyn}^{({pdc})}.
+\end{equation}
+The forcing from the parameterizations, $\partial \gi{E}_{phys}^{({param})}$, does not appear in this budget (although the dynamical core state does `feel' the parameterization forcing) as the energy cycle for the parameterizations is, by design in CAM, closed. Furthermore, one can use \eqref{eq:budget_efix} to diagnose energy dissipation in the dynamical core and physics-dynamics coupling from quantities computed in physics
+\begin{equation}
+\partial \gi{E}_{dyn}^{({adiab})}+\partial \gi{E}_{dyn}^{({pdc})}=-\partial \gi{E}_{phys}^{({efix})}-\partial \gi{E}_{phys}^{({pwork})}.
+\end{equation}
+This is useful if the diagnostics are not implemented in the dynamical core.
+
+{\color{red}{The  and the total energy is computed using the dynamical cores definition of total energy \eqref{eq:comprehensice_energy}. }}
+
+
  \begin{figure}[h]
  \centering
  \includegraphics[width=35pc]{figs/dEdt.pdf}
@@ -331,6 +431,7 @@ This configuration is most energetically consistent in that the physical paramet
 \verb+  +{\color{blue}{output 'dBF'}}\\
 \verb+end do+
 \caption{Pseudo-code ...}
+\label{fig:dAD}
 \end{figure}
 
 \section{Conclusions}\label{sec:concl}
